--- a/mandelbulber2/formula/ui/mandalay_box_v2.ui
+++ b/mandelbulber2/formula/ui/mandalay_box_v2.ui
@@ -30,6 +30,13 @@
     <number>2</number>
    </property>
    <item>
+    <widget class="QLabel" name="label_55">
+     <property name="text">
+      <string notr="true">Formula also works with Max Axis (on Rendering Engine tab - Distance Estimation Function)</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="MyGroupBox" name="groupCheck_transf_function_enabledA_false">
      <property name="title">
       <string>&amp;Box Fold</string>
