--- a/mandelbulber2/formula/ui/msltoe_toroidal_v3.ui
+++ b/mandelbulber2/formula/ui/msltoe_toroidal_v3.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>898</width>
-    <height>3125</height>
+    <height>3132</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -1283,6 +1283,16 @@
           </property>
          </widget>
         </item>
+        <item row="2" column="0">
+         <widget class="MyCheckBox" name="checkBox_analyticDE_enabled">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
+          <property name="text">
+           <string notr="true">abs(aux.dist)</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
      </layout>
@@ -1522,7 +1532,7 @@
            <item row="0" column="0">
             <widget class="QLabel" name="label_51">
              <property name="text">
-              <string>Stop iteration count =</string>
+              <string>temp</string>
              </property>
             </widget>
            </item>
@@ -1561,25 +1571,18 @@
        </widget>
       </item>
       <item>
-       <layout class="QGridLayout" name="gridLayout_30" rowstretch="0,0,0" columnstretch="0,1">
+       <layout class="QGridLayout" name="gridLayout_30" rowstretch="0,0" columnstretch="0,0">
         <property name="spacing">
          <number>2</number>
         </property>
-        <item row="1" column="0">
-         <widget class="QLabel" name="label_53">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_58">
           <property name="text">
-           <string>diagonal fold X&gt;Y:</string>
+           <string>temp</string>
           </property>
          </widget>
         </item>
-        <item row="2" column="0">
-         <widget class="QLabel" name="label_57">
-          <property name="text">
-           <string>abs x * y</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="1">
+        <item row="1" column="1">
          <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_z">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -1607,10 +1610,10 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="0">
-         <widget class="QLabel" name="label_58">
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_57">
           <property name="text">
-           <string>positive diag fold:</string>
+           <string>abs x * y</string>
           </property>
          </widget>
         </item>
@@ -1827,5 +1830,70 @@
   <tabstop>groupCheck_info</tabstop>
  </tabstops>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>checkBox_analyticDE_enabled_false</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>checkBox_transf_function_enabledC_false</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>14</x>
+     <y>991</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>60</x>
+     <y>923</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_analyticDE_enabled_false</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>spinboxInt_analyticDE_start_iterations_A</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>89</x>
+     <y>984</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>255</x>
+     <y>964</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_analyticDE_enabled_false</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>spinboxInt_analyticDE_stop_iterations_A</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>21</x>
+     <y>979</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>699</x>
+     <y>956</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_analyticDE_enabled_false</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>spinbox_transf_offset_0</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>16</x>
+     <y>987</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>492</x>
+     <y>980</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
